--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -218,19 +218,75 @@
         }
       },
       "workshops": {
-        "title": "Workshops",
+        "title-27": "Journée des Ateliers – 27 Janvier",
+        "venue-27": "Lieu A",
+        "adress-27": "123 Rue de l'Atelier",
         "workshops": [
           {
-            "title": "Workshop 1",
-            "description": "Workshop 1 description"
+            "title": "Atelier 1 : INFRA",
+            "description": "Avec l'avènement des chatbots, des grands modèles de langage (LLMs) et d'autres technologies d'IA générative, ainsi que d'autres progrès dans le domaine de l'IA, il y a une explosion de la demande en puissance de calcul. L'IA n'est plus simplement de l'informatique, c'est une science computationnelle. En tant que telle, elle ne peut plus se réaliser avec des équipements auto-gérés et occasionnels. Des infrastructures de calcul plus avancées sont nécessaires pour répondre aux besoins des utilisateurs en termes de puissance de calcul, de capacité de RAM GPU, d'environnements logiciels et de sécurité, tout en assurant une utilisation efficace des ressources de plus en plus coûteuses. L'objectif de cet atelier est de réunir des personnes responsables des infrastructures de calcul (sur site, cloud ou hybride) destinées à prendre en charge les charges de travail IA (à la fois l'entraînement et l'inférence) dans le but de créer une communauté en Suisse.",
+            "schedule": {
+              "time": "9h00 à 17h",
+              "equipment": "Équipement attendu : à confirmer."
+            },
+            "activities": [
+              "L'atelier comprendra des présentations principales et invitées, mais se concentrera surtout sur des présentations courtes (~10-15 min) au cours desquelles les participants partageront des sujets tels que les technologies en test ou en utilisation, la répartition des charges de travail, les défis spécifiques ou des projets visant à améliorer l'infrastructure IA.",
+              "Ces présentations seront structurées simplement afin de permettre à un plus grand nombre de personnes de participer, avec un format typique décrivant le cas d'utilisation, les points de douleur et les solutions potentielles.",
+              "Nous organiserons également des groupes de travail pour encourager la collaboration et travailler à la création d'une communauté 'IA-sys-admin'."
+            ],
+            "topics": [
+              "Une technologie en test ou en utilisation (par exemple, code, Determined.ai).",
+              "Comment les charges de travail sont mappées au matériel.",
+              "Aspects particulièrement difficiles de l'infrastructure IA.",
+              "Projets visant à améliorer l'infrastructure."
+            ]
           },
           {
-            "title": "Workshop 2",
-            "description": "Workshop 2 description"
+            "title": "Atelier 2 : Edge AI",
+            "description": "Dans un monde de plus en plus connecté, la capacité de traiter les données à la source, c'est-à-dire plus près de l'endroit où elles sont générées, est devenue cruciale. Cet atelier offre un aperçu complet mais concis de l'Edge AI, en se concentrant sur les dispositifs, les méthodes et les outils qui font de cette technologie un véritable changement de paradigme. Les participants exploreront comment l'Edge AI permet le traitement des données en temps réel, réduit la latence et améliore la confidentialité en minimisant la nécessité d'envoyer des données vers le cloud. À la fin de cet atelier, les participants auront une compréhension large des aspects fondamentaux de l'Edge AI, les habilitant à explorer et à mettre en œuvre ces technologies dans leurs propres projets.",
+            "schedule": {
+              "time": "9h00 à 17h",
+              "equipment": "Équipement attendu : à confirmer."
+            },
+            "activities": [
+              "Matin : Présentation des différentes approches pour l'Edge AI avec plusieurs dispositifs, y compris les microcontrôleurs, les GPU embarqués, les FPGAs et les NPUs.",
+              "Présentation des méthodologies pour les applications orientées Edge, y compris les outils de quantification, de benchmarking et de déploiement sur un ou plusieurs dispositifs.",
+              "Après-midi : Deux tutoriels pratiques axés sur le déploiement de modèles sur différents types de dispositifs."
+            ],
+            "topics": [
+              "Introduction aux réseaux neuronaux légers et aux techniques de compression de modèles.",
+              "Études de cas réels montrant comment l'Edge AI est appliquée."
+            ]
           },
           {
-            "title": "Workshop 3",
-            "description": "Workshop 3 description"
+            "title": "Atelier 3 : Generation Augmentée par la Recherche (RAG)",
+            "description": "Le cadre RAG (Generation Augmentée par la Recherche) combine la recherche et la génération au sein de grands modèles de langage (LLM) pour produire des réponses plus contextuelles et informatives. Cet atelier propose une introduction technique à RAG, incluant des exemples concrets de son application pour améliorer les systèmes de gestion des connaissances. Les participants exploreront également l'auto-hébergement de LLMs afin d'assurer la confidentialité et la sécurité lors du déploiement des technologies d'IA générative. À la fin de l'atelier, les participants seront capables d'interroger les LLMs sur le contenu de leurs documents associés, les dotant de l'expertise nécessaire pour implémenter RAG dans des scénarios réels.",
+            "schedule": {
+              "time": "2 sessions indépendantes : 9h-12h30 et 13h30-17h",
+              "equipment": "Ordinateur portable personnel requis."
+            },
+            "activities": [
+              "Sessions sur la vue d'ensemble de RAG, auto-hébergement de LLMs avec Ollama.",
+              "Exemples pratiques utilisant Google Colab.",
+              "Implémentation de RAG dans des applications réelles.",
+              "Discussions sur le déploiement pratique de RAG."
+            ]
+          },
+          {
+            "title": "Atelier 4 : MLOps",
+            "description": "Cet atelier aide les participants à implémenter un processus MLOps pour une expérience de Machine Learning, en passant d'un notebook Jupyter à un service de production complet dans le cloud. L'objectif est de fournir les compétences techniques nécessaires pour gérer le cycle de vie des modèles de Machine Learning, promouvoir la collaboration entre les équipes et automatiser les processus opérationnels afin d'assurer la reproductibilité, la fiabilité et le déploiement efficace des modèles dans des environnements de production. Les participants apprendront également les meilleures pratiques pour améliorer le processus de déploiement et sortir les modèles du cadre expérimental.",
+            "schedule": {
+              "time": "9h-12h30 et 13h30-17h",
+              "equipment": "Ordinateur portable personnel avec WSL2 / Linux Ubuntu installé et prêt à l'emploi."
+            },
+            "activities": [
+              "Exercice de brise-glace.",
+              "Prise en main avec une simple expérience de machine learning.",
+              "Transformation de cette expérience pour reproduire et évaluer la qualité du modèle.",
+              "Collaboration efficace pour développer un modèle fiable et fonctionnel.",
+              "Déploiement du modèle sur le cloud.",
+              "Redéploiement automatique du modèle en cas de modifications."
+            ]
           }
         ]
       }
