--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -343,7 +343,10 @@
       },
       "footer": {
         "title": "Our Platinum partners",
-        "terms": " AI Days. All rights reserved."
+        "terms": " AI Days. All rights reserved.",
+        "partenaire-1": "https://www.mobiliere.ch",
+        "partenaire-2": "https://www.ehl.edu",
+        "partenaire-3": "https://www.hes-so.ch"
       }
     }
   ]
